modification de la page a propos

--- a/GuliFit/public/a_propos.html
+++ b/GuliFit/public/a_propos.html
@@ -82,24 +82,34 @@
         <section class="part3">
             <h1>Envie de Conseils Sportifs ? <br> Coaching Personnalisé à Votre Demande ?</h1>
             <div class="point">
-                <div>
-                    <img src="../assets/image/pictrogramme/puce_ok_bleu.svg" alt="puce_ok_bleu">
-                    <h3>Des débuts solides pour des réussites durables</h3>
-                    <p>Que vous soyez novice ou expérimenté, nos coachs vous guident à chaque étape de votre parcours. Avec des conseils personnalisés et des programmes adaptés à vos besoins, vous serez certain d’atteindre vos objectifs tout en progressant à votre rythme. Faites de vos ambitions une réalité dès aujourd’hui.</p>
+                <div class="point-item">
+                    <div class="title-with-icon">
+                        <img src="../assets/image/pictrogramme/puce_ok_bleu.svg" alt="puce_ok_bleu" class="puce_ok_bleu">
+                        <h3>Des débuts solides pour des réussites durables</h3>
+                    </div>
+                    <p>Que vous soyez novice ou expérimenté, nos coachs vous guident à chaque étape de votre parcours. Avec des conseils personnalisés et des programmes adaptés à vos besoins, vous serez certain d'atteindre vos objectifs tout en progressant à votre rythme. Faites de vos ambitions une réalité dès aujourd'hui.</p>
                 </div>
-                <div>
-                    <img src="../assets/image/pictrogramme/puce_ok_bleu.svg" alt="puce_ok_bleu">
-                    <h3>Votre évolution, notre mission.</h3>
-                    <p>Nos coachs sont à votre écoute pour concevoir un accompagnement sur mesure, qui respecte vos envies et vos contraintes. Profitez d’un suivi expert et bienveillant pour dépasser vos limites en toute sécurité. Transformez vos efforts en résultats concrets avec un coaching unique.</p>
+                <div class="point-item">
+                    <div class="title-with-icon">
+                        <img src="../assets/image/pictrogramme/puce_ok_bleu.svg" alt="puce_ok_bleu" class="puce_ok_bleu">
+                        <h3>Votre évolution, notre mission.</h3>
+                    </div>
+                    <p>Nos coachs sont à votre écoute pour concevoir un accompagnement sur mesure, qui respecte vos envies et vos contraintes. Profitez d'un suivi expert et bienveillant pour dépasser vos limites en toute sécurité. Transformez vos efforts en résultats concrets avec un coaching unique.</p>
                 </div>
-                <div>
-                    <img src="../assets/image/pictrogramme/puce_ok_bleu.svg" alt="puce_ok_bleu">
-                    <h3>Un coach, un plan, votre succès.</h3>
-                    <p>Découvrez la puissance d’un programme entièrement pensé pour vous. Nos coachs s’investissent à 100 % pour vous fournir les outils, la motivation et l’accompagnement nécessaires à vos réussites. Parce que chaque chemin est différent, votre coaching le sera aussi.</p>
+                <div class="point-item">
+                    <div class="title-with-icon">
+                        <img src="../assets/image/pictrogramme/puce_ok_bleu.svg" alt="puce_ok_bleu" class="puce_ok_bleu">
+                        <h3>Un coach, un plan, votre succès.</h3>
+                    </div>
+                    <p>Découvrez la puissance d'un programme entièrement pensé pour vous. Nos coachs s'investissent à 100 % pour vous fournir les outils, la motivation et l'accompagnement nécessaires à vos réussites. Parce que chaque chemin est différent, votre coaching le sera aussi.</p>
                 </div>
-
+            </div>
+            <div id="letsgo">
+                <a href="./contact.html">LET'S GO !</a>
             </div>
         </section>
+        
+        
         <section class="publicité">
             <div class="pub">
                 <p>Publicités</p>
@@ -138,15 +148,13 @@
                 <a href="./lien_whatsapp_a_mettre"><img src="../assets/image/pictrogramme/picto_whatsapp.svg" alt="picto_whatsapp"></a>
             </div>
             <div class="coordonnees">
-                <p>+336 16 04 27 82 <br> contact@gulifit.com</p>
+                <p>+336 16 04 27 82 </p>
+                <p>contact@gulifit.com</p>
             </div>
         </div>
         <div class="logo_footer">
             <img src="../assets/image/logo/logo_horizontal_footer.svg" alt="logo_gulifit">
             <p>Tous droits réservés © Copyright 2025 GuliFit</p>
-        </div>
-        <div id="letsgo">
-            <a href="./contact.html">LET'S GO !</a>
         </div>
     </footer>
 </body>
