--- a/GuliFit/public/index.html
+++ b/GuliFit/public/index.html
@@ -156,7 +156,8 @@
                 <a href="./lien_whatsapp_a_mettre"><img src="../assets/image/pictrogramme/picto_whatsapp.svg" alt="picto_whatsapp"></a>
             </div>
             <div class="coordonnees">
-                <p>+336 16 04 27 82 <br> contact@gulifit.com</p>
+                <p>+336 16 04 27 82 </p>
+                <p>contact@gulifit.com</p>
             </div>
         </div>
         <div class="logo_footer">
