A propos finit + démarrage de la page contact

--- a/GuliFit/public/index.html
+++ b/GuliFit/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../assets/style/accueil_versionMobile.css">
     <link rel="stylesheet" href="../assets/style/accueil_versionPC.css">
-    <title>Accueil</title>
+    <title>GuliFit - Accueil</title>
 </head>
 <body>
     <header>
