--- a/GuliFit/public/a_propos.html
+++ b/GuliFit/public/a_propos.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../assets/style/a_propos_versionMobile.css">
     <link rel="stylesheet" href="../assets/style/a_propos_versionPC.css">
-    <title>À propos</title>
+    <title>GuliFit - À propos</title>
 </head>
 <body>
     <header>
@@ -33,22 +33,25 @@
         </section>
     </header>
     <main>
+        <section class="page_header">
+            <h1>À PROPOS DE GULIFIT</h1>
+        </section>
         <section class="part1">
-            <div>
-                <img src="../assets/image/a propos/guli.jpg" alt="Photo_de_guli">
+            <div class="part1-1">
+                <img src="../assets/image/a propos/guli.jpg" alt="Photo_de_guli" class="guli">
                 <div class="text">
                     <h2>Mon parcours</h2>
                     <p>Quand j'ai commencé le sport, je me suis sentie un peu perdue. À l'époque, il y avait peu de contenu accessible ou adapté à mes besoins, ce qui a rendu mes débuts compliqués. Mais malgré les obstacles, j'ai persévéré, car j'avais une vision claire : vivre de ma passion pour le sport. Aujourd'hui, ce rêve est devenu une réalité. En tant que coach, je suis fière de pouvoir accompagner d'autres personnes dans leur propre cheminement, qu'elles soient novices ou déjà expérimentées. Chaque étape de mon parcours m'a préparée à cette mission.</p>
                 </div>
             </div>
-            <div>
+            <div class="part1-2">
                 <img src="../assets/image/logo/logo_vertical.svg" alt="Logo_Gulifit">
                 <div class="text">
                     <h2>Mes valeurs</h2>
                     <p>Ce qui me guide au quotidien, ce sont des valeurs profondes de partage, d'entraide et de bienveillance. Je crois fermement que le sport est bien plus qu'une activité physique : c'est une manière de se découvrir, de repousser ses limites et de trouver un équilibre. Pour moi, tout le monde devrait pouvoir accéder à des conseils clairs, pratiques et motivants, sans se sentir jugé ou exclu. Mon objectif est de créer un espace où chacun se sent soutenu, quel que soit son niveau ou ses ambitions.</p>
                 </div>
             </div>
-            <div>
+            <div class="part1-3">
                 <img src="../assets/image/a propos/guli2.jpg" alt="photo_d'une_sportive">
                 <div class="text">
                     <h2>Mon expérience</h2>
@@ -108,8 +111,6 @@
                 <a href="./contact.html">LET'S GO !</a>
             </div>
         </section>
-        
-        
         <section class="publicité">
             <div class="pub">
                 <p>Publicités</p>
