projet gulifit suite

--- a/GuliFit/public/mes_seances_coach.html
+++ b/GuliFit/public/mes_seances_coach.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../assets/style/mes_seances_coach_versionMobile.css">
-    <link rel="stylesheet" href="../assets/style/mes_seances_coach_versionPC.css">
+    <link rel="stylesheet" href="../assets/style/mes_seances_recettes_coach_versionMobile.css">
+    <link rel="stylesheet" href="../assets/style/mes_seances_recettes_coach_versionPC.css">
     <title>Coach - Mes séances</title>
 </head>
 <body>
@@ -39,18 +39,18 @@
         <aside class="menu">
             <h2>Guli ELMAS</h2>
             <ul>
-                <li><a href="./profil.php">MON PROFIL</a><img src="../assets/image/pictrogramme/fleche_profil_vert.svg" alt="flèche"></li>
-                <li><a href="./seances.php">MES SÉANCES</a></li>
+                <li><a href="./profil.php">MON PROFIL</a></li>
+                <li><a href="./seances.php">MES SÉANCES</a><img src="../assets/image/pictrogramme/fleche_profil_vert.svg" alt="flèche"></li>
                 <li><a href="./recettes.php">MES RECETTES</a></li>
                 <li><a href="./deconnexion.php">DÉCONNEXION</a></li>
             </ul>
         </aside>
-        <section class="seances-content">
+        <section class="seances_recettes-content">
             <div class="illustration-section">
                 <p>Illustration</p>
                 <div class="illustration-container">
                     <div class="illustration">
-                        <img src="../" alt="illustration de la séances">
+                        <img src="../" alt="illustration de la séance">
                     </div>
                     <div class="illustration-upload">
                         <input type="file" name="illustration_seance">
@@ -83,7 +83,7 @@
                     </div>
                     <div class="form-group">
                         <label for="Duree">Durée</label>
-                        <input type="text" id="Duree" placeholder="Ex: Course fractionnée">
+                        <input type="text" id="Duree" placeholder="Ex: 45 minutes">
                     </div>
                     <div class="form-group">
                         <label for="contenu">Contenu</label>
