--- a/GuliFit/public/seances.html
+++ b/GuliFit/public/seances.html
@@ -34,7 +34,8 @@
     </header>
     <main>
         <section class="page_header">
-            <h1>À PROPOS DE GULIFIT</h1>
+            <h1>SÉANCES</h1>
+            <h2>Trouvez le sport qui vous motive et transforme votre quotidien.</h2>
         </section>
         <section class="section-filtre">
             <h2>CHOISISSEZ VOS SÉANCES</h2>
@@ -108,7 +109,7 @@
         <section class="page_nutrition_seance">
           <div class="card_nutrition_seance">
             <div class="image_page_chaine">
-              <img src="../assets/image/seance/recette_page_seance.jpg" alt="un sprinter">
+              <img src="../assets/image/seance/recette_page_seance.jpg" alt="livre de recette">
             </div>
             <div class="intro_nutrition_seance">
                 <h2>Venez découvrir nos idées de recette...</h2>
