recommencer projet gulifit

--- a/GuliFit/index.html
+++ b/GuliFit/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../assets/style/accueil_versionMobile.css">
-    <link rel="stylesheet" href="../assets/style/accueil_versionPC.css">
+    <link rel="stylesheet" href="./assets/style/accueil_versionMobile.css">
+    <link rel="stylesheet" href="./assets/style/accueil_versionPC.css">
     <title>GuliFit - Accueil</title>
 </head>
 <body>
@@ -16,19 +16,19 @@
                 <span></span>
             </div>
             <div id="logo">
-                <img src="../assets/image/logo/logo_horizontal_contraste.svg" alt="logo gulifit">
+                <img src="./assets/image/logo/logo_horizontal_contraste.svg" alt="logo gulifit">
             </div>
             <nav class="navbar">
                 <ul>
                     <li><a href="./index.php">ACCUEIL</a></li>
-                    <li><a href="./a_propos.php">À PROPOS</a></li>
-                    <li><a href="./seances.php">SÉANCES</a></li>
-                    <li><a href="./nutrition.php">NUTRITION</a></li>
-                    <li><a href="./contact.php">CONTACT</a></li>
+                    <li><a href="../public/a_propos">À PROPOS</a></li>
+                    <li><a href="../public/seances.php">SÉANCES</a></li>
+                    <li><a href="../public/nutrition.php">NUTRITION</a></li>
+                    <li><a href="../public/contact.php">CONTACT</a></li>
                 </ul>
             </nav>
             <div id="login">
-                <a href="./connexion.php"><img src="../assets/image/pictogramme/connexion.svg" alt="login"></a>
+                <a href="../public/connexion.php"><img src="../assets/image/pictogramme/connexion.svg" alt="login"></a>
             </div>
         </section>
         <section id="accueil">
@@ -40,7 +40,7 @@
             </div>
             <div id="bas_de_page">
                 <div id="CTA-go">
-                    <a href="./seances.php">LET'S GO !</a>
+                    <a href="../public/seances.php">LET'S GO !</a>
                 </div>
                 <div>
                     <p class="accueil-text">Que vous souhaitiez perdre du poids, gagner <br> en masse musculaire ou préparer une compétition,<br>
@@ -48,7 +48,7 @@
                     <p class="coach-text">Vous êtes coach ? Contribuez à aider nos sportifs !</p>
                 </div>
                 <div id="register">
-                    <a href="./inscription.php">INSCRIVEZ-VOUS</a>
+                    <a href="../public/inscription.php">INSCRIVEZ-VOUS</a>
                 </div>
             </div>
         </section>
@@ -63,7 +63,7 @@
                 <h1>UNE PASSION AU SERVICE<br>DE VOTRE PROGRESSION</h1>
                 <p>Découvrez mon parcours, mes valeurs et ma mission : vous accompagner dans votre évolution sportive, quel que soit votre niveau. Parce que je crois en un sport accessible, motivant et adapté à chacun.</p>
                 <div class="gulifit-button">
-                    <a href="./a_propos.php">DÉCOUVREZ GULIFIT</a>
+                    <a href="../public/a_propos.php">DÉCOUVREZ GULIFIT</a>
                 </div>
             </div>
         </section>
@@ -72,14 +72,14 @@
                 <img src="../assets/image/accueil/accueil_seance.jpg" alt="un homme position pompe">
                 <h1>Des séances<br>pensées pour vous</h1>
                 <div class="button">
-                    <a href="./seance.php">VOIR LES SÉANCES</a>
+                    <a href="../public/seance.php">VOIR LES SÉANCES</a>
                 </div>
             </div>
             <div class="nutrition">
                 <img src="../assets/image/accueil/accueil_nutrition.jpg" alt="une personne qui coupe des légumes">
                 <h1>L’équilibre au cœur de<br>votre performance</h1>
                 <div class="button">
-                    <a href="./nutrition.php">VOIR LES RECETTES</a>
+                    <a href="../public/nutrition.php">VOIR LES RECETTES</a>
                 </div>
             </div>
         </section>
@@ -90,7 +90,7 @@
             <div class="contact_2">
                 <p>Vous aussi, vous souhaitez avoir un programme sur-mesure et être accompagné par un coach professionnel, alors n’attendez plus !</p>
                 <div class="button_contact">
-                    <a href="./contact.php">CONTACTEZ-NOUS</a>
+                    <a href="../public/contact.php">CONTACTEZ-NOUS</a>
                 </div>
             </div>
         </section>
@@ -113,7 +113,7 @@
                 <div class="inscription_txt">
                     <p>Vous êtes coach diplômé et souhaitez proposer votre accompagnement et vos séances, rejoignez Gulifit !</p>
                     <div class="button_register">
-                        <a href="./inscription.php">INSCRIVEZ-VOUS</a>
+                        <a href="../public/inscription.php">INSCRIVEZ-VOUS</a>
                     </div>
                 </div>
             </div>
@@ -132,20 +132,20 @@
     <footer>
         <div class="navbar_foot">
             <ul>
-                <li><a href="./index.php">ACCUEIL</a></li>
-                <li><a href="./a_propos.php">À PROPOS</a></li>
-                <li><a href="./seances.php">SÉANCES</a></li>
-                <li><a href="./nutrition.php">NUTRITION</a></li>
-                <li><a href="./contact.php">CONTACT</a></li>
+                <li><a href="../public/index.php">ACCUEIL</a></li>
+                <li><a href="../public/a_propos.php">À PROPOS</a></li>
+                <li><a href="../public/seances.php">SÉANCES</a></li>
+                <li><a href="../public/nutrition.php">NUTRITION</a></li>
+                <li><a href="../public/contact.php">CONTACT</a></li>
             </ul>
         </div>
         <div class="navbar2_foot">
             <ul>
-                <li><a href="./connexion.php">CONNEXION</a></li>
-                <li><a href="./inscription.php">INSCRIPTION</a></li>
-                <li><a href="./partenaires.php">PARTENAIRES</a></li>
-                <li><a href="./credits.php">CRÉDITS</a></li>
-                <li><a href="./politique_confidentialité.php">POLITIQUE DE CONFIDENTIALITÉ</a></li>
+                <li><a href="../public/connexion.php">CONNEXION</a></li>
+                <li><a href="../public/inscription.php">INSCRIPTION</a></li>
+                <li><a href="../public/partenaires.php">PARTENAIRES</a></li>
+                <li><a href="../public/credits.php">CRÉDITS</a></li>
+                <li><a href="../public/politique_confidentialité.php">POLITIQUE DE CONFIDENTIALITÉ</a></li>
             </ul>
         </div>
         <div class="contact">
