--- a/GuliFit/public/nutrition.html
+++ b/GuliFit/public/nutrition.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../assets/style/seances_nutrition_versionMobile.css">
     <link rel="stylesheet" href="../assets/style/seances_nutrition_versionPC.css">
-    <title>GuliFit - Séances</title>
+    <title>GuliFit - Nutrition</title>
 </head>
 <body>
     <header>
@@ -78,32 +78,32 @@
         </section>
         <section class="card">
             <div class="seance-nutrition-card">
-                <div class="card-header">
-                    <span class="tag">PRISE DE MASSE</span>
-                    <span class="trait">|</span>
-                    <span class="tag">BOEUF - LÉGUMES</span>
-                </div>
-                <div class="card-body">
-                    <img src="../assets/image/nutrition/boeuf_legumes.jpg" alt="plat boeuf légumes">
-                    <div class="details">
-                        <div class="infos">
-                            <img src="../assets/image/pictogramme/plat.svg" alt="picto plat">
-                            <span>Prise de masse</span>
-                        </div>
-                        <div class="infos">
-                            <img src="../assets/image/pictogramme/duree.svg" alt="picto duree">
-                            <span>60 minutes</span>
-                        </div>
-                        <div class="infos">
-                            <img src="../assets/image/pictogramme/coach.svg" alt="picto coach">
-                            <span>Guli</span>
-                        </div>
+                    <div class="card-header">
+                        <span class="tag">PRISE DE MASSE</span>
+                        <span class="trait">|</span>
+                        <span class="tag">BOEUF - LÉGUMES</span>
                     </div>
-                    <div class="description">
-                        <p>Notez la description</p>
+                    <div class="card-body">
+                        <img src="../assets/image/nutrition/boeuf_legumes.jpg" alt="plat boeuf légumes">
+                        <div class="details">
+                            <div class="infos">
+                                <img src="../assets/image/pictogramme/plat.svg" alt="picto plat">
+                                <span>Prise de masse</span>
+                            </div>
+                            <div class="infos">
+                                <img src="../assets/image/pictogramme/duree.svg" alt="picto duree">
+                                <span>60 minutes</span>
+                            </div>
+                            <div class="infos">
+                                <img src="../assets/image/pictogramme/coach.svg" alt="picto coach">
+                                <span>Guli</span>
+                            </div>
+                        </div>
+                        <div class="description">
+                            <p>Notez la description</p>
+                        </div>
+                        <div class="card-btn"><a href="./details-nutrition.html">LET'S EAT !</a></div>
                     </div>
-                    <div class="card-btn">LET'S GO !</div>
-                </div>
             </div>         
         </section>
         <section class="page_nutrition_seance">
